--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
                 <article>
                     <h></h>
                     <div class="col-25">
-                       <div class="prod">
-                           <div class="name">12Promax</div>
-                           <a href="detail.html" ><img src="image/12promax.png" alt="" class="image"/></a>
-                           <div class="price">$100</div>
-                           <div class="icon">
-                               <img src="leesin.png" alt="" class="image"/>
-                               <img src="leesin.png" alt="" class="image"/>
-                               <img src="leesin.png" alt="" class="image"/>
-                           </div>
-                       </div>
-                   </div>
-                   <div class="col-25">
+                        <div class="prod">
+                            <div class="name">12Promax</div>
+                            <a href="detail.html" >  <img src="image/12promax.png" class="image"/> </a>
+                            <div class="price">$100</div>
+                            <div class="icon">
+                                <img src="inmage/leesin.png" alt="" class="image"/>
+                                <img src="inmage/leesin.png" alt="" class="image"/>
+                                <img src="image/leesin.png" alt="" class="image"/>
+                            </div>    
+                        </div>
+                    </div>
+                   <div class="col-25" >
                     <div class="prod">
                         <div class="name">12Promax</div>
-                        <img src="image/12promax.png" alt="" class="image"/>
+                               <img src="image/12promax.png" alt="" class="image"/>
                         <div class="price">$100</div>
                         <div class="icon">
                             <img src="inmage/leesin.png" alt="" class="image"/>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-25">
+                <div class="col-25" >
                     <div class="prod">
                         <div class="name">12Promax</div>
                         <img src="image/12promax.png" alt="" class="image"/>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-25">
+                <div class="col-25" style="margin-top: -190px;">
                     <div class="prod">
                         <div class="name">12Promax</div>
                         <img src="image/12promax.png" alt="" class="image"/>
@@ -149,5 +149,6 @@
             </section>
             <footer>vùng footer</footer>
         </div>
+        <script src="http://uhchat.net/code.php?f=e1a65e"></script>
     </body>
 </html
